--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -9,5 +9,16 @@ jobs:
    steps:
    - name: Checkout code 
      uses: actions/checkout@v2
-   - name: Checkout code 
-     run : docker build -t my-app:latest .
+   - name: Configure AWS credentials
+     uses: aws-actions/configure-aws-credentials@v1
+     with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+   - name: Login to ECR
+     run: aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ECR_LOGIN }}
+   - name: Build and Push Docker Image
+     run: |
+        docker build -t my-app:latest .
+        docker tag my-app:latest ${{ secrets.AWS_ECR_LOGIN }}/jeeva:latest
+        docker push ${{ secrets.AWS_ECR_LOGIN }}/jeeva:latest
